# plover_metronome

./: .gitignore  MANIFEST.in  README.md  README.rst  pyuic.json  setup.cfg  setup.py
plover_metronome/: metronome.py  metronome.ui
plover_metronome/resources/: resources.qrc
