[metadata]
name = plover_metronome
version = 0.0.1
description = Metronome tool plugin for Plover.
long_description = file: README.rst
author = Nick Markopoulos
author_email = nsmarkop@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/nsmarkop/plover_metronome
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev2
py_modules =
    plover_metronome

[options.entry_points]
plover.gui.qt.tool =
    plover_metronome = plover_metronome.metronome:Metronome
